Fixed z-index problem with sidebar in mobile

--- a/fe/css/sidebar.css
+++ b/fe/css/sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
   max-width: 250px !important;
+  z-index: 1000;
 }
 
 .sidebar i {
